src/main/resources/static/css/rover.css
/* ... */
#send-message-button {
    width: 80px;
    height: 100%;
    background-color: #33cabb;
    color: #fff;
    border: none;
    border-radius: 5px;
    cursor: pointer;
}

.toggle-results {
    cursor: pointer;
    display: inline-block;
    width:  10px;
    height:  10px;
    position: relative;
    margin-left:  10px; /* 添加左边距 */
}

.toggle-results::before {
    content: '';
    position: absolute;
    top:   50%;
    left:   50%;
    width:   5px;
    height:   5px;
    border-top:   2px solid #000;
    border-right:   2px solid #000;
    transform: translate(-50%, -50%) rotate(45deg); /*   初始状态为向右 */
    transition: transform   0.3s ease;
}

.toggle-results.expanded::before {
    transform: translate(-50%, -50%) rotate(135deg); /*  展开状态为向下 */
}

.chart-title {
    font-size: 16px;
    font-weight: bold;
    display: block;
    margin-bottom: 5px;
}

.tooltip {
    position: absolute;
    text-align: left;
    padding: 2px;
    font: 12px sans-serif;
    background-color: lightsteelblue;
    border: 0px;
    border-radius: 8px;
    pointer-events: none;
    word-wrap: break-word;
}

#report-area {
    flex: 1;
    width: calc(100% - 50px);
    height: calc(100% - 40px);
    background-color: #fff;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    margin: 20px 20px 20px 20px;
    overflow: hidden;
    display: none;
}


#report-modal .modal-content {
    background-color: #fefefe;
    margin: 15% auto;
    padding: 20px;
    border: 1px solid #888;
    width: 50%;
}

#report-modal #overall-chart {
    margin-bottom: 10px;
}

